--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,9 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-            python -m pip install --upgrade pip
-            pip install -e
-      - name: Run unit tests
-        run: python -m pytest --import-mode=append tests/
+      - uses: actions/checkout@master # THIS IS IMPORTANT
+      - name: Test
+        uses: onichandame/python-test-action@master
+        with:
+          deps_list: 'requirement'
         
