--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,16 +5,18 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: [3.9.10]
+        python-version: [3.9.0]
     runs-on: ubuntu-latest
   
     steps:
-      - uses: actions/checkout@master # THIS IS IMPORTANT
-      - uses: actions/setup-python@v2 # THIS IS IMPORTANT
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v2
         with:
-          python-version: ${{matrix.python-version}}
-      - name: Test
-        uses: onichandame/python-test-action@master
-        with:
-          deps_list: 'requirements.txt'
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+      - name: Run unit tests
+        run: python -m pytest --import-mode=append tests/
         
