--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,10 @@ jobs:
             pip install -r requirements.txt
       - name: Run unit tests
         run: python -m pytest --import-mode=append tests/
-        
+      - name: run report html
+        run: pytest tests/ --html-report=./report
+      - name: export report html
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: ./report/**
