--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -1,7 +1,10 @@
  
 name: build and push on dockerhub
 on: 
-  push:
+  pull_request:
+    types: [closed]
+    branches:
+    - master
 env:
   APP_VERSION: "1.0.0"
 jobs:
@@ -25,4 +28,4 @@ jobs:
             with:
               context: .
               push: true 
-              tags: ${{secrets.DOCKER_USERNAME}}/weather:${{env.APP_VERSION}}
+              tags: ${{secrets.DOCKER_USERNAME}}/pytest:${{env.APP_VERSION}}
